--- a/frontend/my-react-app/src/components/pages/LogPage/log.css
+++ b/frontend/my-react-app/src/components/pages/LogPage/log.css
@@ -300,7 +300,7 @@ html, body {
   gap: 20px;
   margin-bottom: 30px;
   height: 600px;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 .log-entry {
