--- a/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
+++ b/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
@@ -29,13 +29,6 @@
   margin-top: 1rem;
 }
 
-.syntax-highlighter {
-  white-space: pre-wrap !important;
-  overflow-wrap: break-word !important;
-  word-break: break-all !important;
-  width: 100% !important;
-}
-
 .input-container-horizontal {
   display: flex;
   gap: 1rem;
@@ -116,33 +109,18 @@
 }
 
 .payload-content {
-  text-align: left;
   border-radius: 0.5rem;
-  overflow-y: auto;
   max-height: 37.5rem;
+  font-size: 1rem;
   overflow-x: hidden;
+  overflow-y: auto;
   word-wrap: break-word;
-  overflow-wrap: anywhere; 
-  word-break: break-word;
-  hyphens: auto; 
-  color: #00ff00;
+  overflow-wrap: anywhere;
   line-height: 1.3;
   padding: 1rem;
   box-sizing: border-box;
-  max-width: 100%; 
+  max-width: 100%;
 }
-
-.payload-content pre {
-  white-space: pre-wrap !important;
-  word-wrap: break-word !important;
-  word-break: break-word !important;
-}
-
-.App-link:hover {
-  color: #ff0055;
-  text-decoration: underline;
-}
-
 
 .App-logo {
   max-width: 15.625rem;      
@@ -151,7 +129,6 @@
   animation: App-logo-spin infinite 20s linear;
   margin-bottom: -1.875rem;
 }
-
 
 @keyframes App-logo-spin {
   0% {
@@ -165,12 +142,10 @@
   }
 }
 
-
 .main-content {
   margin-left: 13.75rem; 
   padding: 0;
 }
-
 
 ::-webkit-calendar-picker-indicator {
   display: none;
@@ -191,7 +166,6 @@
   transition: all 0.3s ease;
 }
 
-
 .copy-button-payload:active {
   transform: scale(0.95);
   opacity: 0.8;
@@ -200,42 +174,5 @@
 .copy-button-payload:hover {
   background-color: #00CED1;
   color: #000;
-}
-
-
-.payload-text {
-  color: #fff;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  word-break: break-word;
-  font-family: 'Courier New', Courier, monospace;
-}
-
-
-
-
-.number {
-  color: #d62929;
-}
-
-
-.or-word {
-  color: #d62929;
-  font-weight: bold;
-}
-
-/* Grey Symbols: '-' and '/' */
-.grey-symbol {
-  color: #778899;
-}
-
-/* Yellow Symbols: ! @ # $ % ^ & * ( ) */
-.yellow-symbol {
-  color: #d62929;
-}
-
-/* Green Symbols: : ; " ' > < ? { } [ ] \ */
-.green-symbol {
-  color: #e6c300;
 }
 
